# dn42search

./: .gitignore  README.md  api.py  config.example.yml  manage.py  package.json  parsers.py  pyproject.toml  schema.xml  solrconfig.xml  solrschema.xml  spider.py
dn42search/: asgi.py  settings.py  settings_local.py  urls.py  wsgi.py
frontend/: Dockerfile  app.vue  nuxt.config.ts  package.json
frontend/components/: SearchForm.vue  SearchResult.vue
frontend/pages/: index.vue  search.vue
scss/: screen.scss
search/: views.py
searchdb/: admin.py  apps.py  models.py
searchdb/migrations/: 0001_initial.py  0002_alter_host_name_alter_url_content_alter_url_etag_and_more.py  0003_remove_url_etag_remove_url_mime_url_headers.py  0004_alter_url_title.py  0005_url_excerpt_alter_url_content.py  0006_url_text.py
spider/: apps.py  spider.py
spider/management/commands/: runspider.py
templates/: base.html  index.html  search_results.html
